--- a/packages/components/table/lib/table.css
+++ b/packages/components/table/lib/table.css
@@ -1,18 +1,18 @@
-div.styled-table table {
+table {
     /*font-family: Arial, Helvetica, sans-serif;*/
     border-collapse: collapse;
 }
 
-div.styled-table table td, div.styled-table table th {
+table td, table th {
     border: 1px solid #ddd;
     padding: 6px;
 }
 
-div.styled-table table tr:nth-child(even){background-color: #f2f2f2;}
+table tr:nth-child(even){background-color: #f2f2f2;}
 
-div.styled-table table tr:hover {background-color: #ddd;}
+table tr:hover {background-color: #ddd;}
 
-div.styled-table table th, div.styled-table tfoot {
+table th, tfoot {
     padding-top: 12px;
     padding-bottom: 12px;
     text-align: center;
