--- a/packages/components/table/lib/table.css
+++ b/packages/components/table/lib/table.css
@@ -8,7 +8,7 @@ table td, table th {
     padding: 6px;
 }
 
-table tr:nth-child(even){background-color: #f2f2f2;}
+table-xx tr:nth-child(even){background-color: #f2f2f2;}
 
 table tr:hover {background-color: #ddd;}
 
